--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>react-cli</title>
+    <script>
+      
+    </script>
   </head>
   <body>
     <div id="root"></div>
